<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/silver"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/silver"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/noOrdersText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/ordersumText"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="2"
                android:gravity="right"
                android:text="0 грн"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp" >

            <Button
                android:id="@+id/clearButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/clearCart" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/confirmText" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_weight="1" >
        </ListView>

        <TextView
            android:id="@+id/emptyCartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/emptyCartString"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="invisible" />

    </RelativeLayout>

</LinearLayout>