<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/actionsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/addressAndContacts"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange500"
                android:src="@drawable/logo_mini" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    
                    android:text="@string/address1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    
                    android:src="@drawable/phone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bluegrey100"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    
                    android:text="@string/address2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                     
                    android:src="@drawable/phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    
                    android:text="@string/address3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                     
                    android:src="@drawable/phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bluegrey100"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/TextView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    
                    android:text="@string/address4"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                     
                    android:src="@drawable/phone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    
                    android:text="@string/address5"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                     
                    android:src="@drawable/phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bluegrey100"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/TextView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    
                    android:text="@string/address6"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                     
                    android:src="@drawable/phone" />
            </LinearLayout>

            <ImageView
                android:id="@+id/actionImage2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange500"
                android:src="@drawable/casa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    
                    android:text="@string/address7"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/imageButton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                     
                    android:src="@drawable/phone" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange500"
                android:src="@drawable/bella" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bluegrey100"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/TextView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    
                    android:text="@string/address8"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/imageButton9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                     
                    android:src="@drawable/phone" />
            </LinearLayout>
            
             <ImageView
                android:id="@+id/ImageView03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange500"
                android:src="@drawable/tasty" />
             
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/TextView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    
                    android:text="@string/address9"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/imageButton10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    
                    android:src="@drawable/phone" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
